@@ -1,3 +1,4 @@
+- changed stone chest opening/closing sound
 - chopping with wood in offhand
 - fixed problem with animal and structure spawning configuration
 v1.1.2
